--- a/index.html
+++ b/index.html
@@ -43,13 +43,19 @@
         </nav>
         <ul class="contact-number">
           <li>
-            <a class="contacts" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+            <a class="contacts" href="mailto:info@devstudio.com">
+              <svg class="contact-icon" width="16" height="12">
+                <use href="./img/icons.svg#email"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="contacts contacts-number" href="tel:+380961111111"
-              >+38 096 111 11 11</a
+            <a class="contacts contacts-number" href="tel:+380961111111">
+              <svg class="contact-icon" width="10" height="16">
+                <use href="./img/icons.svg#phone"></use>
+              </svg>
+              +38 096 111 11 11</a
             >
           </li>
         </ul>
@@ -69,6 +75,11 @@
           <h2 class="invisible-header">Особенности</h2>
           <ul class="feature-list">
             <li class="feature-list-item">
+              <div class="feature-list-icon-bg">
+                <svg class="feature-list-icons">
+                  <use href="./img/icons.svg#antenna"></use>
+                </svg>
+              </div>
               <h3 class="feature">Внимание к деталям</h3>
               <p class="feature-description">
                 Идейные соображения, а также начало повседневной работы по
@@ -76,6 +87,11 @@
               </p>
             </li>
             <li class="feature-list-item">
+              <div class="feature-list-icon-bg">
+                <svg class="feature-list-icons">
+                  <use href="./img/icons.svg#clock"></use>
+                </svg>
+              </div>
               <h3 class="feature">Пунктуальность</h3>
               <p class="feature-description">
                 Задача организации, в особенности же рамки и место обучения
@@ -83,6 +99,11 @@
               </p>
             </li>
             <li class="feature-list-item">
+              <div class="feature-list-icon-bg">
+                <svg class="feature-list-icons">
+                  <use href="./img/icons.svg#diagram"></use>
+                </svg>
+              </div>
               <h3 class="feature">Планирование</h3>
               <p class="feature-description">
                 Равным образом консультация с широким активом в значительной
@@ -90,6 +111,11 @@
               </p>
             </li>
             <li class="feature-list-item">
+              <div class="feature-list-icon-bg">
+                <svg class="feature-list-icons">
+                  <use href="./img/icons.svg#astronaut"></use>
+                </svg>
+              </div>
               <h3 class="feature">Современные технологии</h3>
               <p class="feature-description">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -145,6 +171,36 @@
               <div class="text-team-wrapper">
                 <h3 class="team">Игорь Демьяненко</h3>
                 <p class="section-team-position">Product Designer</p>
+                <ul class="social-list">
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./img/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./img/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./img/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./img/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -159,6 +215,36 @@
               <div class="text-team-wrapper">
                 <h3 class="team">Ольга Репина</h3>
                 <p class="section-team-position">Frontend Developer</p>
+                <ul class="social-list">
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./img/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./img/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./img/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./img/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -173,6 +259,36 @@
               <div class="text-team-wrapper">
                 <h3 class="team">Николай Тарасов</h3>
                 <p class="section-team-position">Marketing</p>
+                <ul class="social-list">
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./img/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./img/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./img/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./img/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="employer-card">
@@ -186,7 +302,86 @@
               <div class="text-team-wrapper">
                 <h3 class="team">Михаил Ермаков</h3>
                 <p class="section-team-position">UI Designer</p>
+                <ul class="social-list">
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./img/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./img/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./img/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./img/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="section">
+        <div class="conteiner">
+          <h2 class="our-clients" lang="ru">Постоянные клиенты</h2>
+          <ul class="our-client-list">
+            <li class="our-client-logo">
+              <a href="" class="our-client-link">
+                <svg class="our-client-icon" width="170" height="92">
+                  <use href="./img/icons.svg#group"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="our-client-logo">
+              <a href="" class="our-client-link">
+                <svg class="our-client-icon" width="170" height="92">
+                  <use href="./img/icons.svg#group-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="our-client-logo">
+              <a href="" class="our-client-link">
+                <svg class="our-client-icon" width="170" height="92">
+                  <use href="./img/icons.svg#group-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="our-client-logo">
+              <a href="" class="our-client-link">
+                <svg class="our-client-icon" width="170" height="92">
+                  <use href="./img/icons.svg#group-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="our-client-logo">
+              <a href="" class="our-client-link">
+                <svg class="our-client-icon" width="170" height="92">
+                  <use href="./img/icons.svg#group-4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="our-client-logo">
+              <a href="" class="our-client-link">
+                <svg class="our-client-icon" width="170" height="92">
+                  <use href="./img/icons.svg#group-5"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -194,7 +389,7 @@
     </main>
     <!-- ?====MAIN CONTENT END==== -->
     <footer class="footer-section">
-      <div class="conteiner">
+      <div class="conteiner footer-wrapper">
         <a class="logo logo-footer" href=""
           >Web<span class="log-footer">Studio</span></a
         >
@@ -223,6 +418,11 @@
             </li>
           </ul>
         </address>
+        <ul class="footer-social">
+          <li class="footer-social-list">
+            <h2 class="footer-social-text" lang="ru">Присоединяйтесь</h2>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
