--- a/index.html
+++ b/index.html
@@ -390,39 +390,69 @@
     <!-- ?====MAIN CONTENT END==== -->
     <footer class="footer-section">
       <div class="conteiner footer-wrapper">
-        <a class="logo logo-footer" href=""
-          >Web<span class="log-footer">Studio</span></a
-        >
+        <div>
+          <a class="logo logo-footer" href=""
+            >Web<span class="log-footer">Studio</span></a
+          >
 
-        <address>
-          <ul class="">
-            <li class="address">
-              <a
-                class="address-footer"
-                href="https://goo.gl/maps/SxyoPfmhPoB7iFz16"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                г. Киев, пр-т Леси Украинки, 26
+          <address>
+            <ul class="">
+              <li class="address">
+                <a
+                  class="address-footer"
+                  href="https://goo.gl/maps/SxyoPfmhPoB7iFz16"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  г. Киев, пр-т Леси Украинки, 26
+                </a>
+              </li>
+              <li class="address contacts-footer">
+                <a class="contacts-footer" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="address">
+                <a class="contacts-footer" href="tel:+380961111111"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-social">
+          <h2 class="footer-social-text" lang="ru">Присоединяйтесь</h2>
+          <ul class="social-list">
+            <li class="social-list-item">
+              <a class="social-list-link social-list-link-footer" href="">
+                <svg class="social-list-icon social-list-icon-footer" width="20" height="20">
+                  <use href="./img/icons.svg#instagram"></use>
+                </svg>
               </a>
             </li>
-            <li class="address contacts-footer">
-              <a class="contacts-footer" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
+            <li class="social-list-item">
+              <a class="social-list-link social-list-link-footer" href="">
+                <svg class="social-list-icon social-list-icon-footer" width="20" height="20">
+                  <use href="./img/icons.svg#twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="address">
-              <a class="contacts-footer" href="tel:+380961111111"
-                >+38 096 111 11 11</a
-              >
+            <li class="social-list-item">
+              <a class="social-list-link social-list-link-footer" href="">
+                <svg class="social-list-icon social-list-icon-footer" width="20" height="20">
+                  <use href="./img/icons.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a class="social-list-link social-list-link-footer" href="">
+                <svg class="social-list-icon social-list-icon-footer" width="20" height="20">
+                  <use href="./img/icons.svg#linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
-        <ul class="footer-social">
-          <li class="footer-social-list">
-            <h2 class="footer-social-text" lang="ru">Присоединяйтесь</h2>
-          </li>
-        </ul>
+        </div>
       </div>
     </footer>
   </body>
