--- a/portfolio.html
+++ b/portfolio.html
@@ -29,10 +29,10 @@
           >
           <ul class="nav-list">
             <li class="nav-list-item">
-              <a class="nav-list-link" href="index.html">Студия</a>
+              <a class="nav-list-link" href="">Студия</a>
             </li>
             <li class="nav-list-item">
-              <a class="nav-list-link" href="">Портфолио</a>
+              <a class="nav-list-link" href="portfolio.html">Портфолио</a>
             </li>
             <li class="nav-list-item">
               <a class="nav-list-link" href="">Контакты</a>
@@ -41,13 +41,19 @@
         </nav>
         <ul class="contact-number">
           <li>
-            <a class="contacts" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+            <a class="contacts" href="mailto:info@devstudio.com">
+              <svg class="contact-icon" width="16" height="12">
+                <use href="./img/icons.svg#email"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="contacts contacts-number" href="tel:+380961111111"
-              >+38 096 111 11 11</a
+            <a class="contacts contacts-number" href="tel:+380961111111">
+              <svg class="contact-icon" width="10" height="16">
+                <use href="./img/icons.svg#phone"></use>
+              </svg>
+              +38 096 111 11 11</a
             >
           </li>
         </ul>
@@ -78,7 +84,7 @@
 
           <ul class="project-list">
             <li class="project-card">
-              <a class="" href=""
+              <a class="project-list-hover" href=""
                 ><img
                   src="img/portfolio/технокряк.jpg"
                   alt="Технокряк"
@@ -92,7 +98,7 @@
               </a>
             </li>
             <li class="project-card">
-              <a class="" href=""
+              <a class="project-list-hover" href=""
                 ><img
                   src="img/portfolio/постер.jpg"
                   alt="Постер"
@@ -108,7 +114,7 @@
               </a>
             </li>
             <li class="project-card">
-              <a class="" href=""
+              <a class="project-list-hover" href=""
                 ><img
                   src="img/portfolio/ресторан.jpg"
                   alt="Ресторан"
@@ -122,7 +128,7 @@
               </a>
             </li>
             <li class="project-card">
-              <a class="" href=""
+              <a class="project-list-hover" href=""
                 ><img
                   src="img/portfolio/проектПрайм.jpg"
                   alt="Праймпроект"
@@ -136,7 +142,7 @@
               </a>
             </li>
             <li class="project-card">
-              <a class="" href=""
+              <a class="project-list-hover" href=""
                 ><img
                   src="img/portfolio/проектБокс.jpg"
                   alt="бокспроект"
@@ -150,7 +156,7 @@
               </a>
             </li>
             <li class="project-card">
-              <a class="" href=""
+              <a class="project-list-hover" href=""
                 ><img
                   src="img/portfolio/inspiration.jpg"
                   alt="веб-сайт"
@@ -164,7 +170,7 @@
               </a>
             </li>
             <li class="project-card">
-              <a class="" href=""
+              <a class="project-list-hover" href=""
                 ><img
                   src="img/portfolio/издание.jpg"
                   alt="Издание"
@@ -178,7 +184,7 @@
               </a>
             </li>
             <li class="project-card">
-              <a class="" href=""
+              <a class="project-list-hover" href=""
                 ><img
                   src="img/portfolio/проектЛаб.jpg"
                   alt="ПроектЛаб"
@@ -192,7 +198,7 @@
               </a>
             </li>
             <li class="project-card">
-              <a class="" href=""
+              <a class="project-list-hover" href=""
                 ><img
                   src="img/portfolio/growingBusiness.jpg"
                   alt="растущийбизнес"
@@ -211,35 +217,86 @@
       <!-- ===END BUTTON SECTIONS=== -->
     </main>
     <footer class="footer-section">
-      <div class="conteiner">
-        <a class="logo logo-footer" href=""
-          >Web<span class="log-footer">Studio</span></a
-        >
+      <div class="conteiner footer-wrapper">
+        <div>
+          <a class="logo logo-footer" href=""
+            >Web<span class="log-footer">Studio</span></a
+          >
 
-        <address>
-          <ul class="">
-            <li class="address">
-              <a
-                class="address-footer"
-                href="https://goo.gl/maps/SxyoPfmhPoB7iFz16"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                г. Киев, пр-т Леси Украинки, 26
+          <address>
+            <ul class="">
+              <li class="address">
+                <a
+                  class="address-footer"
+                  href="https://goo.gl/maps/SxyoPfmhPoB7iFz16"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  г. Киев, пр-т Леси Украинки, 26
+                </a>
+              </li>
+              <li class="address contacts-footer">
+                <a class="contacts-footer" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="address">
+                <a class="contacts-footer" href="tel:+380961111111"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-social">
+          <h2 class="footer-social-text" lang="ru">Присоединяйтесь</h2>
+          <ul class="social-list">
+            <li class="social-list-item">
+              <a class="social-list-link social-list-link-footer" href="">
+                <svg
+                  class="social-list-icon social-list-icon-footer"
+                  width="20"
+                  height="20"
+                >
+                  <use href="./img/icons.svg#instagram"></use>
+                </svg>
               </a>
             </li>
-            <li class="address contacts-footer">
-              <a class="contacts-footer" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
+            <li class="social-list-item">
+              <a class="social-list-link social-list-link-footer" href="">
+                <svg
+                  class="social-list-icon social-list-icon-footer"
+                  width="20"
+                  height="20"
+                >
+                  <use href="./img/icons.svg#twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="address">
-              <a class="contacts-footer" href="tel:+380961111111"
-                >+38 096 111 11 11</a
-              >
+            <li class="social-list-item">
+              <a class="social-list-link social-list-link-footer" href="">
+                <svg
+                  class="social-list-icon social-list-icon-footer"
+                  width="20"
+                  height="20"
+                >
+                  <use href="./img/icons.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a class="social-list-link social-list-link-footer" href="">
+                <svg
+                  class="social-list-icon social-list-icon-footer"
+                  width="20"
+                  height="20"
+                >
+                  <use href="./img/icons.svg#linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
