--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </ul>
         </nav>
         <ul class="contact-number">
-          <li>
+          <li class="contact-list">
             <a class="contacts" href="mailto:info@devstudio.com">
               <svg class="contact-icon" width="16" height="12">
                 <use href="./img/icons.svg#email"></use>
@@ -50,7 +50,7 @@
               info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="contact-list">
             <a class="contacts contacts-number" href="tel:+380961111111">
               <svg class="contact-icon" width="10" height="16">
                 <use href="./img/icons.svg#phone"></use>
@@ -421,32 +421,48 @@
           </address>
         </div>
         <div class="footer-social">
-          <h2 class="footer-social-text" lang="ru">Присоединяйтесь</h2>
+          <p class="footer-social-text" lang="ru">Присоединяйтесь</p>
           <ul class="social-list">
             <li class="social-list-item">
               <a class="social-list-link social-list-link-footer" href="">
-                <svg class="social-list-icon social-list-icon-footer" width="20" height="20">
+                <svg
+                  class="social-list-icon social-list-icon-footer"
+                  width="20"
+                  height="20"
+                >
                   <use href="./img/icons.svg#instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
               <a class="social-list-link social-list-link-footer" href="">
-                <svg class="social-list-icon social-list-icon-footer" width="20" height="20">
+                <svg
+                  class="social-list-icon social-list-icon-footer"
+                  width="20"
+                  height="20"
+                >
                   <use href="./img/icons.svg#twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
               <a class="social-list-link social-list-link-footer" href="">
-                <svg class="social-list-icon social-list-icon-footer" width="20" height="20">
+                <svg
+                  class="social-list-icon social-list-icon-footer"
+                  width="20"
+                  height="20"
+                >
                   <use href="./img/icons.svg#facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
               <a class="social-list-link social-list-link-footer" href="">
-                <svg class="social-list-icon social-list-icon-footer" width="20" height="20">
+                <svg
+                  class="social-list-icon social-list-icon-footer"
+                  width="20"
+                  height="20"
+                >
                   <use href="./img/icons.svg#linkedin"></use>
                 </svg>
               </a>
