--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
           >
           <ul class="nav-list">
             <li class="nav-list-item">
-              <a class="nav-list-link" href="">Студия</a>
+              <a class="nav-list-link" href="index.html">Студия</a>
             </li>
             <li class="nav-list-item">
               <a class="nav-list-link" href="portfolio.html">Портфолио</a>
