FINISH HIM( work#4)

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,9 @@
               <a class="nav-list-link" href="index.html">Студия</a>
             </li>
             <li class="nav-list-item">
-              <a class="nav-list-link" href="portfolio.html">Портфолио</a>
+              <a class="nav-list-link current" href="portfolio.html"
+                >Портфолио</a
+              >
             </li>
             <li class="nav-list-item">
               <a class="nav-list-link" href="">Контакты</a>
@@ -249,7 +251,7 @@
           </address>
         </div>
         <div class="footer-social">
-          <h2 class="footer-social-text" lang="ru">Присоединяйтесь</h2>
+          <p class="footer-social-text" lang="ru">Присоединяйтесь</p>
           <ul class="social-list">
             <li class="social-list-item">
               <a class="social-list-link social-list-link-footer" href="">
