--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
           </ul>
         </div>
       </section>
+      <!-- TEAM SECTIONS -->
       <section class="section-team section">
         <div class="conteiner">
           <h2 class="components">Наша команда</h2>
@@ -247,6 +248,7 @@
                 </ul>
               </div>
             </li>
+            <!-- END TEAM SECTIONS -->
 
             <li class="employer-card">
               <img
