--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           >
           <ul class="nav-list">
             <li class="nav-list-item">
-              <a class="nav-list-link current" href="">Студия</a>
+              <a class="nav-list-link current" href="">Студия </a>
             </li>
             <li class="nav-list-item">
               <a class="nav-list-link" href="portfolio.html">Портфолио</a>
@@ -67,7 +67,9 @@
       <section class="hero-section">
         <div class="conteiner">
           <h1 class="hero">Эффективные решения для вашего бизнеса</h1>
-          <button class="modal-btn" type="button">Заказать услугу</button>
+          <button class="modal-btn" type="button" data-modal-open>
+            Заказать услугу
+          </button>
         </div>
       </section>
       <section class="section">
@@ -130,28 +132,37 @@
           <h2 class="components">Чем мы занимаемся</h2>
           <ul class="work-section">
             <li>
-              <img
-                src="./img/work1.jpg"
-                alt="занятие1"
-                width="370"
-                height="294"
-              />
+              <div class="especially-photo">
+                <img
+                  src="./img/work1.jpg"
+                  alt="занятие1"
+                  width="370"
+                  height="294"
+                />
+                <p class="overlay">Десктопные приложения</p>
+              </div>
             </li>
             <li>
-              <img
-                src="./img/work2.jpg"
-                alt="занятие2"
-                width="370"
-                height="294"
-              />
+              <div class="especially-photo">
+                <img
+                  src="./img/work2.jpg"
+                  alt="занятие2"
+                  width="370"
+                  height="294"
+                />
+                <p class="overlay">Мобильные приложения</p>
+              </div>
             </li>
             <li>
-              <img
-                src="./img/work3.jpg"
-                alt="занятие3"
-                width="370"
-                height="294"
-              />
+              <div class="especially-photo">
+                <img
+                  src="./img/work3.jpg"
+                  alt="занятие3"
+                  width="370"
+                  height="294"
+                />
+                <p class="overlay">Дизайнерские решения</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -248,7 +259,6 @@
                 </ul>
               </div>
             </li>
-            <!-- END TEAM SECTIONS -->
 
             <li class="employer-card">
               <img
@@ -473,5 +483,17 @@
         </div>
       </div>
     </footer>
+    <!--!-----Modal window-----!-->
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="modal-close-btn" data-modal-close>
+          <svg class="modal-close-icon" width="18" height="18">
+            <use href="./img/icons.svg#close-icon"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+
+    <script src="./js/modal.js"></script>
   </body>
 </html>
