--- a/portfolio.html
+++ b/portfolio.html
@@ -86,13 +86,20 @@
 
           <ul class="project-list">
             <li class="project-card">
-              <a class="project-list-hover" href=""
-                ><img
-                  src="img/portfolio/технокряк.jpg"
-                  alt="Технокряк"
-                  width="370"
-                  height="294"
-                />
+              <a class="project-list-hover" href="">
+                <div class="project-wrapper">
+                  <img
+                    src="img/portfolio/технокряк.jpg"
+                    alt="Технокряк"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="overlay-projects">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="project-text-wrapper">
                   <h2 class="title-portfolio">Технокряк</h2>
                   <p class="subtitle">Веб-сайт</p>
@@ -100,13 +107,20 @@
               </a>
             </li>
             <li class="project-card">
-              <a class="project-list-hover" href=""
-                ><img
-                  src="img/portfolio/постер.jpg"
-                  alt="Постер"
-                  width="370"
-                  height="294"
-                />
+              <a class="project-list-hover" href="">
+                <div class="project-wrapper">
+                  <img
+                    src="img/portfolio/постер.jpg"
+                    alt="Постер"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="overlay-projects">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="project-text-wrapper">
                   <h2 class="title-portfolio">
                     Постер New Orlean vs Golden Star
@@ -116,13 +130,20 @@
               </a>
             </li>
             <li class="project-card">
-              <a class="project-list-hover" href=""
-                ><img
-                  src="img/portfolio/ресторан.jpg"
-                  alt="Ресторан"
-                  width="370"
-                  height="294"
-                />
+              <a class="project-list-hover" href="">
+                <div class="project-wrapper">
+                  <img
+                    src="img/portfolio/ресторан.jpg"
+                    alt="Ресторан"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="overlay-projects">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="project-text-wrapper">
                   <h2 class="title-portfolio">Ресторан Seafood</h2>
                   <p class="subtitle">Приложение</p>
@@ -130,13 +151,20 @@
               </a>
             </li>
             <li class="project-card">
-              <a class="project-list-hover" href=""
-                ><img
-                  src="img/portfolio/проектПрайм.jpg"
-                  alt="Праймпроект"
-                  width="370"
-                  height="294"
-                />
+              <a class="project-list-hover" href="">
+                <div class="project-wrapper">
+                  <img
+                    src="img/portfolio/проектПрайм.jpg"
+                    alt="Праймпроект"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="overlay-projects">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="project-text-wrapper">
                   <h2 class="title-portfolio">Проект Prime</h2>
                   <p class="subtitle">Маркетинг</p>
@@ -144,13 +172,20 @@
               </a>
             </li>
             <li class="project-card">
-              <a class="project-list-hover" href=""
-                ><img
-                  src="img/portfolio/проектБокс.jpg"
-                  alt="бокспроект"
-                  width="370"
-                  height="294"
-                />
+              <a class="project-list-hover" href="">
+                <div class="project-wrapper">
+                  <img
+                    src="img/portfolio/проектБокс.jpg"
+                    alt="бокспроект"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="overlay-projects">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="project-text-wrapper">
                   <h2 class="title-portfolio">Проект Boxes</h2>
                   <p class="subtitle">Приложение</p>
@@ -158,13 +193,20 @@
               </a>
             </li>
             <li class="project-card">
-              <a class="project-list-hover" href=""
-                ><img
-                  src="img/portfolio/inspiration.jpg"
-                  alt="веб-сайт"
-                  width="370"
-                  height="294"
-                />
+              <a class="project-list-hover" href="">
+                <div class="project-wrapper">
+                  <img
+                    src="img/portfolio/inspiration.jpg"
+                    alt="веб-сайт"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="overlay-projects">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="project-text-wrapper">
                   <h2 class="title-portfolio">Inspiration has no Borders</h2>
                   <p class="subtitle">Веб-сайт</p>
@@ -172,13 +214,20 @@
               </a>
             </li>
             <li class="project-card">
-              <a class="project-list-hover" href=""
-                ><img
-                  src="img/portfolio/издание.jpg"
-                  alt="Издание"
-                  width="370"
-                  height="294"
-                />
+              <a class="project-list-hover" href="">
+                <div class="project-wrapper">
+                  <img
+                    src="img/portfolio/издание.jpg"
+                    alt="Издание"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="overlay-projects">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="project-text-wrapper">
                   <h2 class="title-portfolio">Издание Limited Edition</h2>
                   <p class="subtitle">Дизайн</p>
@@ -186,13 +235,20 @@
               </a>
             </li>
             <li class="project-card">
-              <a class="project-list-hover" href=""
-                ><img
-                  src="img/portfolio/проектЛаб.jpg"
-                  alt="ПроектЛаб"
-                  width="370"
-                  height="294"
-                />
+              <a class="project-list-hover" href="">
+                <div class="project-wrapper">
+                  <img
+                    src="img/portfolio/проектЛаб.jpg"
+                    alt="ПроектЛаб"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="overlay-projects">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="project-text-wrapper">
                   <h2 class="title-portfolio">Проект LAB</h2>
                   <p class="subtitle">Маркетинг</p>
@@ -200,13 +256,20 @@
               </a>
             </li>
             <li class="project-card">
-              <a class="project-list-hover" href=""
-                ><img
-                  src="img/portfolio/growingBusiness.jpg"
-                  alt="растущийбизнес"
-                  width="370"
-                  height="294"
-                />
+              <a class="project-list-hover" href="">
+                <div class="project-wrapper">
+                  <img
+                    src="img/portfolio/growingBusiness.jpg"
+                    alt="растущийбизнес"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="overlay-projects">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="project-text-wrapper">
                   <h2 class="title-portfolio">Growing Business</h2>
                   <p class="subtitle">Приложение</p>
